kubernetes/apps/nix/attic/app/service-tailscale.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: attic-tailscale
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "attic"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: attic
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
