kubernetes/apps/nix/attic/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attic
spec:
  hostnames: ["nix.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: attic
          port: 8080
